feat: get user tasks containing tag