@@ -1,5 +1,7 @@
 package pl.javorus.habittracker.controller;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -13,12 +15,17 @@ import pl.javorus.habittracker.service.TagService;
 import pl.javorus.habittracker.service.TaskService;
 import pl.javorus.habittracker.service.UserService;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.UUID;
+import java.util.stream.Collectors;
+
 
 @RestController
 @RequestMapping("/api/tasks")
 public class TaskController {
+    private static final Logger logger = LoggerFactory.getLogger(TaskController.class);
     private final TaskService taskService;
     private final UserService userService;
     private final TagService tagService;
@@ -30,14 +37,25 @@ public class TaskController {
         this.tagService = tagService;
     }
     @PostMapping("/user/{userId}")
-    public ResponseEntity<Task> createTask(@RequestBody TaskRequest taskRequest, @PathVariable String userId) {
+    public Task createTask(@RequestBody TaskRequest taskRequest, @PathVariable String userId) {
         User user = userService.getUser(userId);
         if (user == null) {
-            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+//            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+                return null;
         }
-        List<Tag> tags = taskRequest.tagIds().stream().map(tagService::getTag).toList();
-        if (tags.contains(null)) {
-            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+
+        List<Tag> tags = new ArrayList<>();
+        if (taskRequest.tagIds() != null) {
+            logger.info("Retrieved tagIds: {}", taskRequest.tagIds());
+            tags = taskRequest.tagIds().stream()
+                    .map(tagService::getTag)
+                    .filter(Objects::nonNull)
+                    .collect(Collectors.toList());
+        }
+
+        if (tags.size() < taskRequest.tagIds().size()) {
+//            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+            return null;
         }
         Task task = new Task(
                 UUID.randomUUID().toString(),
@@ -48,11 +66,15 @@ public class TaskController {
                 taskRequest.duration(),
                 tags
         );
-        return new ResponseEntity<>(taskService.createTask(task), HttpStatus.OK);
+        return taskService.createTask(task);
     }
     @GetMapping("/{taskId}")
     public Task getTask(@PathVariable String taskId) {
         return taskService.getTask(taskId);
+    }
+    @GetMapping("/user/{userId}/tag/{tagId}")
+    public List<Task> getUserTasksWithTag(@RequestParam String userId, @RequestParam String tagId) {
+        return taskService.getAllTasksForUserWithTag(userId, tagId);
     }
     @GetMapping("/user/{userId}")
     public List<Task> getAllTasksForUser(@PathVariable String userId) {
